================================================================================
 v1.3.2 (unreleased)
================================================================================
Added: Colorize output with pygments.
Added: Test Python style with pycodestyle.
Fixed: Fail gracefully when the underlying source code changes during execution.
Changed: Print values (e.g. 1, 'foo', etc) by themselves, nonredundantly. For
  example, ic(3) now prints 'ic| 3' instead of 'ic| 3: 3'.


================================================================================
 v1.3.1
================================================================================
Removed: Support for Python 3.3, which reached EOL on 2017-09-29.
Fixed: ic() invocations that fail to find or access source code (e.g. eval(),
  exec(), python -i, etc) now print an error message instead of throwing an
  IOError (Python 2) or OSError (Python 3).


================================================================================
 v1.3
================================================================================
First release.

This changelog wasn't maintained prior to v1.3.